force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/datamask_Masking_Execution_Log_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Prod</externalDataSource>
    <externalName>datamask__Masking_Execution_Log__c</externalName>
    <label>Run Log</label>
    <pluralLabel>Run Logs</pluralLabel>
</CustomObject>