force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/ConnectionReceivedId__c.field-meta.xml
<CustomField>
    <fullName>ConnectionReceivedId__c</fullName>
    <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
    <label>Received Connection ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>