force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Configuration_Id_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Configuration_Id_c__c</fullName>
    <externalDeveloperName>datamask__Configuration_Id__c</externalDeveloperName>
    <label>Configuration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>