force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Error_Message_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Error_Message_c__c</fullName>
    <externalDeveloperName>datamask__Error_Message__c</externalDeveloperName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>