force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Has_Master_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Has_Master_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>datamask__Has_Master__c</externalDeveloperName>
    <label>Has Master</label>
    <type>Checkbox</type>
</CustomField>