force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Masking_Execution_Id_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Masking_Execution_Id_c__c</fullName>
    <externalDeveloperName>datamask__Masking_Execution_Id__c</externalDeveloperName>
    <label>Masking Execution Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>