force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Message_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Message_c__c</fullName>
    <externalDeveloperName>datamask__Message__c</externalDeveloperName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>