force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Object_Processing_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Object_Processing_c__c</fullName>
    <externalDeveloperName>datamask__Object_Processing__c</externalDeveloperName>
    <label>Object Processing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>