force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Record_Count_Total_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Record_Count_Total_c__c</fullName>
    <externalDeveloperName>datamask__Record_Count_Total__c</externalDeveloperName>
    <inlineHelpText>The total number of records on the object being processed.</inlineHelpText>
    <label>Record Count Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>