force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Records_Failed_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Records_Failed_c__c</fullName>
    <externalDeveloperName>datamask__Records_Failed__c</externalDeveloperName>
    <inlineHelpText>Total number of records failed for this object.</inlineHelpText>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>