force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Status_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Status_c__c</fullName>
    <externalDeveloperName>datamask__Status__c</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>