force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/datamask_Type_c__c.field-meta.xml
<CustomField>
    <fullName>datamask_Type_c__c</fullName>
    <externalDeveloperName>datamask__Type__c</externalDeveloperName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Execution Start</fullName>
            </value>
            <value>
                <fullName>Pre-Processing Completion</fullName>
            </value>
            <value>
                <fullName>Object Completion</fullName>
            </value>
            <value>
                <fullName>Post-Processing Completion</fullName>
            </value>
            <value>
                <fullName>Execution Completion</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>