force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/External_Id_c__c.field-meta.xml
<CustomField>
    <fullName>External_Id_c__c</fullName>
    <externalDeveloperName>External_Id__c</externalDeveloperName>
    <label>External Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>