force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsLocked</externalDeveloperName>
    <label>Is Locked</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>