force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/MayEdit__c.field-meta.xml
<CustomField>
    <fullName>MayEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>MayEdit</externalDeveloperName>
    <label>May Edit</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>