force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/Original_Created_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date_c__c</fullName>
    <externalDeveloperName>Original_Created_Date__c</externalDeveloperName>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>