force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/Sandbox_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name_c__c</fullName>
    <externalDeveloperName>Sandbox_Name__c</externalDeveloperName>
    <label>Sandbox Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>