force-app/main/default/objects/datamask_Masking_Execution_Log_c__x/fields/Sandbox_Org_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Org_ID_c__c</fullName>
    <externalDeveloperName>Sandbox_Org_ID__c</externalDeveloperName>
    <label>Sandbox Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>